--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ct2c",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://supriyakhandekar.github.io/ct2c-job-portal",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -13,6 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh -pages -d build",
     "eject": "react-scripts eject"
   }
 }
